@@ -61,6 +61,7 @@ set log syslog
 #     stopTimeout:       30 seconds  # timeout for service stop
 #     startTimeout:      30 seconds  # timeout for service start
 #     restartTimeout:    30 seconds  # timeout for service restart
+#     execTimeout:       0 seconds   # timeout for test action exec
 # }
 
 ## Set global SSL options (just most common options showed, see manual for
